<?xml version="1.0"?>
<package>
  <name>px4_controller</name>
  <version>0.0.1</version>
  <description>Controller to fly a pixhawk in a space with location feedback (such as motion capture).</description>

  <maintainer email="whoenig@usc.edu">Wolfgang Hoenig</maintainer>

  <license>MIT</license>

  <url type="website">http://ros.org/wiki/crazyflie</url>
  <url type="bugtracker">https://github.com/whoenig/crazyflie_ros/issues</url>

  <author email="whoenig@usc.edu">Wolfgang Hoenig</author>


  <build_depend>nuflie_common</build_depend>
  <build_depend>world_model</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>world_model</run_depend>
  <run_depend>nuflie_common</run_depend>
</package>
